--- a/src/package.json
+++ b/src/package.json
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.6",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^3.3.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
