--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 3000:3000
     environment:
       - PORT=3000
-    command: npm start
+    command: npm run dev
     tty: true
 volumes:
   node_modules:
