--- a/src/package.json
+++ b/src/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^3.3.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "redis": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
