add environment variables

--- a/src/.env
+++ b/src/.env
@@ -4,3 +4,4 @@ PGHOST=bi1yy426usclyzasq6sa-postgresql.services.clever-cloud.com
 PGPASSWORD=1sMlQsJr4s0qAuIUScXV
 PGDATABASE=bi1yy426usclyzasq6sa
 PGPORT=5432
+SOAP_KEY=ngnotifyrest
