--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.3'
 
 services:
+  redis:
+      image: redis:6.2-alpine
+      restart: always
+      expose:
+        - 6379
+      command: redis-server --save 20 1 --loglevel warning
+      volumes: 
+        - redis:/data
   app:
     container_name: 'app'
     build: .
@@ -11,7 +19,18 @@ services:
       - 3000:3000
     environment:
       - PORT=3000
+      - ACCESS_TOKEN_KEY=dbe1885491d5b9b9feb7ce6b3056948f7dffbf8847
+      - PGUSER=uzcs3iyzirjhhshe0ckr
+      - PGHOST=bi1yy426usclyzasq6sa-postgresql.services.clever-cloud.com
+      - PGPASSWORD=1sMlQsJr4s0qAuIUScXV
+      - PGDATABASE=bi1yy426usclyzasq6sa
+      - PGPORT=5432
+      - SOAP_KEY=ngnotifyrest
     command: npm run dev
     tty: true
+    depends_on:
+      - redis
 volumes:
   node_modules:
+  redis:
+    driver: local
